plugins/kotlin/code-insight/testData/linemarkers/nativeTestLineMarker/native/native.kt
import kotlin.test.Test

class <!LINE_MARKER("descr='Run Test'")!>NativeTest<!> {
    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>runTest<!>() {
        // Not executed.
    }
}
